--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #fafbff;
   --foreground: #171717;
 }
 
@@ -23,4 +23,18 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+/* WAJIB untuk mencegah canvas melebar keluar */
+.marzipano-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden !important;
+}
+
+/* hotspot bawaan Marzipano jangan sampai bikin scroll */
+.hotspot {
+  overflow: visible !important;
+  white-space: nowrap;
 }
